tests/e2e/scarb/snapshots/e2e__scarb__manifest_diagnostics__workspace_manifest_diagnostics_from_member_manifest.snap
---
source: tests/e2e/scarb/manifest_diagnostics.rs
description: "// → Scarb.toml\n[package]\nname = \"root_ws\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n[workspace]\nmembers = [\"members/member_a\", \"members/member_b\"]\n\n// → members/member_a/Scarb.toml\n[package]\nname = \"member_a\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n[[target.starknet-contract]]\nname = \"dup_contract\"\n\n// → members/member_a/src/lib.cairo\nfn main() {}\n\n// → members/member_b/Scarb.toml\n[package]\nname = \"member_b\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n[[target.starknet-contract]]\nname = \"dup_contract\"\n\n// → members/member_b/src/lib.cairo\nfn main() {}"
expression: "diagnostics_report(&mut ls,\n&[\"Scarb.toml\", \"members/member_a/Scarb.toml\", \"members/member_b/Scarb.toml\"])"
---
diagnostics:
- url: '[ROOT_URL]members/member_a/Scarb.toml'
  diagnostics:
  - related_code: ''
    diagnostic:
      range:
        start:
          line: 0
          character: 0
        end:
          line: 0
          character: 0
      severity: 1
      source: scarb
      message: |-
        workspace contains duplicate target definitions `starknet-contract (dup_contract)`
        help: use different target names to resolve the conflict
